# xuantie-toolchain

./: .gitignore  LICENSE.upstream.MIT  NOTICE  STATEMENT.md  TOOLCHAIN.md  main.go  readme.md  versionLog.md  vt_other.go  vt_windows.go
GUIDE/: 03_泛型编程指南.md  05_模块系统.md  07_铁铺使用指南.md  玄铁语言参考手册.md  自举编译器实现笔记.md  铁铺设计笔记.md
Test/: 15_综合测试.xt  26_数组高阶方法.xt  30_错误模块路径.xt  33_数组教程示例.xt  34_顶层设.xt  35_单遍历.xt  36_单遍历2.xt  37_裸遍历.xt  38_深层嵌套此.xt  39_数组插测试.xt  40_带参方法.xt  41_字典遍历此.xt  42_双遍历此.xt  43_检测引用模拟.xt  44_大量方法.xt  45_复杂方法.xt  50_JSON特殊字符.xt  51_嵌套断续作用域.xt  52_运算符重载链.xt  53_数组大规模操作.xt  54_文件读写边界.xt  55_弱引用安全验证.xt  56_布尔类型安全.xt  57_综合运行时安全.xt  58_并发异步测试.xt  59_并发通道压力.xt  60_弱引用并发释放.xt
cli/: Cargo.toml  build.rs
cli/src/: lock.rs  main.rs  manifest.rs
cli/src/commands/: add.rs  build.rs  check.rs  clean.rs  fmt.rs  lint.rs  mod.rs  new_cmd.rs  run.rs  test.rs  version.rs
compiler/: compiler.go  llvm.go
evaluator/: evaluator.go  ffi_other.go  ffi_windows.go
examples/: 旋转球体.xt  渲染示例.xt
examples/data/: test_pandas.xt
lexer/: lexer.go
lib/: 数组.xt
lib/数组/: tiepm.toml  数组.xt
lib/渲染/: tiepm.toml  渲染.xt  渲染桥.c
parser/: parser.go
runtime/: xt_net.c  xt_net.h  xt_runtime.c  xt_runtime.h  xt_threadpool.c  xt_threadpool.h
tiepm/: 核心.xt  示例tiepm.toml
tiepm-site/: .gitignore
xuantie_compiler/: 玄铁.xt  编译.xt  语法分析.xt
